--- a/m/busi/steps/fee.html
+++ b/m/busi/steps/fee.html
@@ -53,6 +53,14 @@
                         <button class="weui-vcode-btn">‰</button>
                     </div>
                 </div>
+                <div class="weui-cell weui-cell_vcode hide" id="term_num">
+                    <div class="weui-cell__hd">
+                        <label class="weui-label">终端数量</label>
+                    </div>
+                    <div class="weui-cell__bd">
+                        <input class="weui-input" type="number" value="1" name="term_num" placeholder="请输入终端数量">
+                    </div>
+                </div>
             </div>
             <div class="weui-btn-area btn-area">
                 <a id="back-btn" href="javascript:" class="weui-btn weui-btn_default" onclick="prev()">上一步</a>
@@ -107,6 +115,8 @@
 				},
 				error: function() {}
 			});
+		} else {
+			$('#term_num').show();
 		}
 	}
     $(function() {
