--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -123,12 +123,12 @@
                         <input type="hidden" name="equi_type">
                     </div>
                 </div>
-                <div class="weui-cell weui-cell_vcode hide" id="term_num">
+                <div class="weui-cell" id="term_num" type="hidden">
                     <div class="weui-cell__hd">
                         <label class="weui-label">终端数量</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="number" name="term_num" value="1" placeholder="请输入终端数量">
+                        <input class="weui-input" type="number" name="term_num" value=1 placeholder="请输入终端数量">
                     </div>
                 </div>
                 <div class="weui-cell hide">
