--- a/m/busi/steps/fee.html
+++ b/m/busi/steps/fee.html
@@ -58,7 +58,7 @@
                         <label class="weui-label">终端数量</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="number" value=1 name="term_num" placeholder="请输入终端数量">
+                        <input class="weui-input" type="number" value=1 name="term_num">
                     </div>
                 </div>
             </div>
