--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -128,7 +128,7 @@
                         <label class="weui-label">终端数量</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" type="text" name="term_num" value="1">
+                        <input class="weui-input" placeholder="请输入终端数量" type="number" value="1" name="term_num">
                     </div>
                 </div>
                 <div class="weui-cell hide">
