--- a/m/busi/term-info.html
+++ b/m/busi/term-info.html
@@ -128,7 +128,7 @@
                         <label class="weui-label">终端数量</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input" placeholder="请输入终端数量" type="number" value="1" name="term_num">
+                        <input class="weui-input" placeholder="请输入终端数量" type="number" name="term_num">
                     </div>
                 </div>
                 <div class="weui-cell hide">
@@ -474,7 +474,7 @@
     function onClickAdd() {
         operateType = 'create';
         weui.page.show('#detail-page');
-		$('#term_num').show();
+		$('#term_num').show().val(1);
         weui.form.clear('#form');
         weui.form.load('#form', {
             mchnt_id: query.mchnt_id
