--- a/m/busi/steps/fee.html
+++ b/m/busi/steps/fee.html
@@ -109,7 +109,7 @@
 				success: function(data) {
 					if (data.errcode == 0) {
 						weui.form.load('#form', data.data);
-						if((data.data.debit_card_fee == "" && data.data.credit_card_fee == "" && data.data.fee == "" ) {
+						if(data.data.debit_card_fee == "" && data.data.credit_card_fee == "" && data.data.fee == "" ) {
 							$('#term_num').show();
 							$('input[name="term_num"]').val(1);
 						}
