--- a/m/busi/steps/fee.html
+++ b/m/busi/steps/fee.html
@@ -113,7 +113,7 @@
 							$('#term_num').show();
 							$('input[name="term_num"]').val(1);
 						} else {
-							$('#term_num').style.display = 'none';
+							$('#term_num').hide();
 						}
 						
 					} else {
