--- a/m/busi/mchnt-elec-info.html
+++ b/m/busi/mchnt-elec-info.html
@@ -267,18 +267,22 @@
             mchnt_id: query.mchnt_id,
             images: []
         };
-
+		var flag = true;
         $('.weui-uploader').find('.weui-uploader__file').forEach(function(item) {
             var id = parseInt($(item).attr('data-id'));
 			if(uploaderData[id] == null) {
-				weui.alert('图片加载中，请稍候提交', {
-					title: '提示'
-				});
-				return;
+				flag = false;
+				return flag;
 			}
             data.images.push(uploaderData[id]);
         });
 
+		if(flag == false) {
+			weui.alert('图片加载中，请稍候提交', {
+				title: '提示'
+			});
+			return;
+		}
         $$.request('/action/bm/mchnt-elec-info/' + operateType, data, {
             success: function(data) {
                 if (data.errcode == 0) {
