--- a/m/busi/steps/mchnt.html
+++ b/m/busi/steps/mchnt.html
@@ -310,7 +310,7 @@
 			weui.alert('请完善电子资料', {
 				title: '提示'
 			});
-			return;
+			return false;
 		}
 		
         var param = $('#form').serializeObject();
@@ -320,19 +320,23 @@
 			param['flow'] = arr[0];
 			param['step'] = parseInt(arr[1]);
 		}
+		var flag = true;
         $('#form').find('.weui-uploader__file').forEach(function(item) {
             var id = parseInt($(item).attr('data-id'));
             if(id != undefined && id != null) {
 				if(uploaderData[id] == null) {
-					weui.alert('图片加载中，请稍候提交', {
-						title: '提示'
-					});
-					return;
+					flag = false;
+					return flag;
 				}
 				elec_info.push(uploaderData[id]);
 			}
         });
-
+		if(flag == false) {
+			weui.alert('图片加载中，请稍候提交', {
+				title: '提示'
+			});
+			return;
+		}
         param.elec_info = elec_info;
 
         param = $.extend({}, query, param);
