--- a/m/index.html
+++ b/m/index.html
@@ -70,15 +70,14 @@
                 <i class="icon-home"></i>
                 <p class="weui-tabbar__label">首页</p>
             </a>
-            <a href="javascript:;" class="weui-tabbar__item">
-                <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
+            <!--a href="javascript:;" class="weui-tabbar__item">
                 <i class="icon-friend"></i>
                 <p class="weui-tabbar__label">通讯录</p>
-            </a>
+            </a-->
             <a href="javascript:;" class="weui-tabbar__item">
                 <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
-                <i class="icon-search"></i>
-                <p class="weui-tabbar__label">发现</p>
+                <i class="icon-list"></i>
+                <p class="weui-tabbar__label">工作台</p>
             </a>
             <a href="my.html" class="weui-tabbar__item">
                 <!-- <img src="images/icon_nav_button.png" alt="" 
