--- a/m/my/merchant.html
+++ b/m/my/merchant.html
@@ -85,7 +85,7 @@
             var name = $(this).attr('data-name');
 
             window.location.href = 'income-history-merchant.html?' + $.param({
-                mcht_id: id,
+                mchnt_id: id,
                 mcht_name: name
             });
 		}
