--- a/m/my.html
+++ b/m/my.html
@@ -117,13 +117,13 @@
                 <i class="icon-home"></i>
                 <p class="weui-tabbar__label">首页</p>
             </a>
-            <a href="javascript:;" class="weui-tabbar__item">
+            <!--a href="javascript:;" class="weui-tabbar__item">
                 <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon">
                 <p class="weui-tabbar__label">通讯录</p>
-            </a>
+            </a-->
             <a href="javascript:;" class="weui-tabbar__item">
-                <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon">
-                <p class="weui-tabbar__label">发现</p>
+                <i class="icon-list"></i>
+                <p class="weui-tabbar__label">工作台</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item">
                 <!-- <img src="images/icon_nav_button.png" alt="" 
@@ -132,29 +132,25 @@
                 <p class="weui-tabbar__label">我</p>
             </a>
         </div>
-        <div class="weui-tabbar">
+        
+        <!-- <div class="weui-tabbar">
             <a href="index.html" class="weui-tabbar__item weui-bar__item_on">
-                <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
                 <i class="icon-home"></i>
                 <p class="weui-tabbar__label">首页</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item">
-                <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
                 <i class="icon-friend"></i>
                 <p class="weui-tabbar__label">通讯录</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item">
-                <!-- <img src="images/icon_nav_button.png" alt="" class="weui-tabbar__icon"> -->
                 <i class="icon-search"></i>
                 <p class="weui-tabbar__label">发现</p>
             </a>
             <a href="javascript:;" class="weui-tabbar__item weui-bar__item_on">
-                <!-- <img src="images/icon_nav_button.png" alt="" 
-                class="weui-tabbar__icon"> -->
                 <i class="icon-my"></i>
                 <p class="weui-tabbar__label">我</p>
             </a>
-        </div>
+        </div>  -->
     </div>
     <script type="text/javascript" src="js/jweixin-1.0.0.js"></script>
     <script type="text/javascript" src="js/lib/zepto.min.js"></script>
