--- a/m/my/merchant.html
+++ b/m/my/merchant.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="merchant-templ" type="text/html">
         {{each rows as row i}}
-        <a class="weui-cell weui-cell_access" href="javascript:;" data-id="{{row.mchnt_id}}" data-name="{{row.mcht_name}}">
+        <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-id="{{row.mchnt_id}}" data-name="{{row.mcht_name}}">
             <div class="weui-cell__bd">
                 <p>{{row.mcht_name}}</p>
             </div>
