--- a/m/my/income-merchant-tp.html
+++ b/m/my/income-merchant-tp.html
@@ -112,13 +112,7 @@
     }
 
     function searchIncome(param, success, error) {
-        var data = {
-            income_type: query.income_type,
-            settle_mon: query.settle_mon,
-            mchnt_id: query.mchnt_id
-        };
-
-		var queryParams = $.extend(data, param);
+		var queryParams = $.extend(query, param);
         $$.request(getUrl(), queryParams, {
             success: function(data) {
                 if (data.errcode == 0) {
