--- a/m/my/income-history-friend.html
+++ b/m/my/income-history-friend.html
@@ -87,8 +87,8 @@
             var page = 'income-friend-tp.html';
             window.location.href = page + '?' + $.param({
                 userid: query.userid,
-                settle_mon: settle_mon,
-                income_type: income_type,
+                settle_mon: row.settle_mon,
+                income_type: row.income_type,
                 nickname: query.nickname
             });
 		}
