--- a/m/my/income-history-merchant.html
+++ b/m/my/income-history-merchant.html
@@ -83,13 +83,11 @@
 		onClickItem: function(row) {
 			console.log(this, arguments);
 			//weui.page.back();
-			var settle_mon = $(this).attr('data-mon');
-            var income_type = $(this).attr('data-tp');
             var page = 'income-merchant-tp.html';
             window.location.href = page + '?' + $.param({
                 mchnt_id: query.mchnt_id,
-                settle_mon: settle_mon,
-                income_type: income_type,
+                settle_mon: row.settle_mon,
+                income_type: row.income_type,
                 mcht_name: query.mcht_name
             });
 		}
