--- a/m/my/merchant.html
+++ b/m/my/merchant.html
@@ -81,11 +81,9 @@
 		onClickItem: function(row) {
 			console.log(this, arguments);
 			//weui.page.back();
-			var id = $(this).attr('data-id');
-            var name = $(this).attr('data-name');
             window.location.href = 'income-history-merchant.html?' + $.param({
-                mchnt_id: id,
-                mcht_name: name
+                mchnt_id: row.mchnt_id,
+                mcht_name: row.mcht_name
             });
 		}
 	}).search();
