--- a/m/my/merchant.html
+++ b/m/my/merchant.html
@@ -66,7 +66,7 @@
 					
                 }
             },
-            error: function() {
+            error: function() {    
                 error();
             }
         });
@@ -81,6 +81,7 @@
 		onClickItem: function(row) {
 			console.log(this, arguments);
 			//weui.page.back();
+			alert(JSON.stringify(row));
             window.location.href = 'income-history-merchant.html?' + $.param({
                 mchnt_id: row.mchnt_id,
                 mcht_name: row.mcht_name
