--- a/m/my/friend.html
+++ b/m/my/friend.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="friend-templ" type="text/html">
         {{each rows as row i}}
-        <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-id="{{row.userid}}" data-name="{{row.nickname || row.mobile}}">
+        <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-index="{{total+i}}">
             <div class="weui-cell__bd">
                 <p>{{row.nickname || row.mobile}}</p>
             </div>
