--- a/m/my/income-history-merchant.html
+++ b/m/my/income-history-merchant.html
@@ -33,7 +33,7 @@
     <script type="text/javascript" src="../js/lib/weuijs/weuijs.min.js"></script>
     <script id="income-templ" type="text/html">
         {{each rows as row i}}
-        <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-mon="{{row.settle_mon}}" data-tp="{{row.income_type}}">
+        <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-index="{{total+i}}">
             <div class="weui-cell__bd">
                 <p>{{formatMonth(row.settle_mon)}} {{$$.formatField(incomeTypeData, row.income_type)}}</p>
             </div>
