--- a/m/busi/steps/routine.html
+++ b/m/busi/steps/routine.html
@@ -41,7 +41,7 @@
     <script id="list-template" type="text/html">
         {{each rows as row i}}
 		<a class="searchbar-result__item" href="javascript:;" data-index="{{total+i}}">
-			<div class="weui-cell weui-cell_access searchbar-result__item">
+			<div class="weui-cell weui-cell_access">
 				<div class="weui-cell__bd weui-cell_primary">
 					<p>{{row.mchnt_abbr}}</p>
 				</div>
