--- a/m/my/income-history-merchant.html
+++ b/m/my/income-history-merchant.html
@@ -35,7 +35,7 @@
         {{each rows as row i}}
         <a class="weui-cell weui-cell_access searchbar-result__item" href="javascript:;" data-index="{{total+i}}">
             <div class="weui-cell__bd">
-                <p>{{row.settle_mon | formatMonth}} {{row.income_type | formatIncomeType}}</p>
+                <p>{{formatMonth(row.settle_mon)}} {{formatIncomeType(row.income_type)}}</p>
             </div>
             <div class="weui-cell__ft">
                 <p>¥ {{row.allot_ins_income1}}</p>
