--- a/m/my/income-friend-tp.html
+++ b/m/my/income-friend-tp.html
@@ -97,11 +97,11 @@
         text: '拓展收益'
     }];
     
-	template.helper('formatDate', function(d) {
+	$.template.helper('formatDate', function(d) {
         return d.substr(0, 4) + '-' + d.substr(4, 2) + '-' + d.substr(6, 2);
     });
 
-    template.helper('formatMonth', function(m) {
+    $.template.helper('formatMonth', function(m) {
         return m.substr(0, 4) + '-' + m.substr(4, 2);
     });
 		
